projects/compiler/test/typechecker/invocation/error_too_few_args.out
Error at %FILE_NAME%:2:4
Not enough arguments for invocation
  |  foo()
        ^
2 arguments required, but 0 were passed
